Fix subnav z-index on hover, fix active subnav height on mobile

--- a/shared/scss/components/common/nav.scss
+++ b/shared/scss/components/common/nav.scss
@@ -52,12 +52,14 @@
   &.active-hover {
     .subnav {
       visibility: visible;
-      max-height: $base*4;
+      max-height: 100%;
 
       @media(min-width: $grid-float-breakpoint) {
+        max-height: $base*4;
         visibility: visible;
         display: block;
         transition: none;
+        z-index: 9999;
       }
     }
   }
